[metadata]
name = fclingo
version = 0.1
author = Philipp Wanko
author_email = wanko@cs.uni-potsdam.de
description = Solver for ASP modulo conditional linear constraints with founded variables
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
url = http://github.com/krr-up/fclingo


[options]
packages = find:
zip_safe = True
include_package_data = True
install_requires =
    setuptools

[options.extras_require]
format =
    black
    isort
    autoflake
lint_flake8 =
    flake8
    flake8-black
    flake8-isort
lint_pylint =
    pylint
typecheck =
    types-setuptools
    mypy
test =
    coverage
doc =
    sphinx
    sphinx_rtd_theme
    nbsphinx
dev =
    fclingo[test,lint_pylint,lint_flake8]

[options.entry_points]
console_scripts =
    fclingo = fclingo:__main__.main
